# pokevault

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  consolidate_data.py  docker-compose.yml  extract_i18n.js  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: badge-battles.json  evolution-families.json  evolution-family-overrides.json  game-pokedexes.json  narrative-tags.json  pokedex.json
docs/: POSTPONED.md  ROADMAP.md  TRAINER_CONTACTS.md  V1_1_POKEDEX_FIRST.md  architecture.html  contributing.html  features.html  index.html  install.html  roadmap.html
docs/assets/: i18n.js  site.css  site.js
maquette/: maquette_v1.html
pokedex/: evolution_families.py  exporters.py  form_labels.py  models.py  regions.py  scraper.py  viewer.py
stitch-html/: binder.html  list.html  stats.html
superpowers/plans/: 2026-04-30-pokemon-trade-states.md  2026-04-30-trainer-contact-book.md  2026-04-30-trainer-contacts.md  2026-05-03-audit-remediation.md  2026-05-03-base-generations-nostalgia-badges.md  2026-05-03-gold-silver-nostalgia-badges.md  2026-05-03-kanto-nostalgia-badges.md  2026-05-03-trainer-card-badge-sharing.md  2026-05-04-printable-binder-placeholders.md  2026-05-05-binder-discoverability-compact-families.md  2026-05-06-simplified-capture-trade-model.md  2026-05-08-remove-pokedex-multi-profiles.md
superpowers/specs/: 2026-04-30-pokemon-trade-states-design.md  2026-04-30-trainer-contact-book-design.md  2026-05-03-base-generations-nostalgia-badges-design.md  2026-05-03-gold-silver-nostalgia-badges-design.md  2026-05-03-trainer-card-badge-sharing-design.md  2026-05-04-printable-binder-placeholders-design.md  2026-05-05-binder-discoverability-compact-families-design.md  2026-05-06-simplified-capture-trade-model-design.md  2026-05-08-remove-pokedex-multi-profiles-design.md
tests/: conftest.py  test_cli_view.py  test_docs_site.py  test_evolution_families.py  test_exporters.py  test_form_labels.py  test_main_cli.py  test_makefile_docker.py  test_mobile_home_css.py  test_models.py  test_regions.py  test_repo_hygiene.py  test_scraper.py  test_theme_palettes.py  test_viewer.py
tracker/: __init__.py  __main__.py  app.py  badge_battle_models.py  binder_models.py  check_version.py  config.py  main.py  models.py  version.py
web/: app.js  artwork-switcher.js  badge-mission.js  badges-page.js  badges-view.js  binder-collection-view.js  binder-layout-engine.js  binder-v2.js  empty-states.js  focus-session.js  hunt-list.js  i18n.js  index.html  keyboard.js  onboarding.js  pokedex-dashboard.js  pokedex-filters.js  pokedex-next-actions.js  pokemon-capture-scope.js  pokemon-drawer.js  pokemon-fiche.js  pokemon-full-view.js  pokemon-modal.js  print-view.js  profiles.js  recommendations.js  stats-view.js  styles.css  themes.js  toast.js  trainer-contacts.js  type-chart.js
(+123 files in other folders)
