[project]
name = "pokevault"
version = "1.6.2"
description = "Local-first Pokédex and Pokémon card collection tracker with FastAPI and Docker"
readme = "README.md"
license = "MIT"
authors = [{ name = "Alexandre Enouf", email = "alexandre.enouf@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "pokemon",
    "pokedex",
    "scraper",
    "collection",
    "tracker",
    "binder",
    "pokepedia",
    "local-first",
    "tcg",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.1.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://boblebol.github.io/pokevault/"
Documentation = "https://boblebol.github.io/pokevault/"
Repository = "https://github.com/Boblebol/pokevault"
Issues = "https://github.com/Boblebol/pokevault/issues"
Changelog = "https://github.com/Boblebol/pokevault/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.12",
]

[tool.uv]
package = false

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:.*tracker\\.main.*found in sys\\.modules.*:RuntimeWarning",
]

# ── coverage (tracker uniquement, 100 % lignes) ───────────────────────────────
[tool.coverage.run]
source = ["tracker"]
branch = false
omit = []

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "N999",  # module name (main.py)
    "B008",  # typer default arguments
    "UP007", # Optional[X] → X | None (pydantic compat)
    "UP042", # StrEnum → keep str+Enum for Typer compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]  # assert OK in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
